add style to pokedex & pokecard

--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -1,3 +1,16 @@
 .Pokecard {
-  border: 2px solid blue;
+  width: 300px;
+  padding: 5px;
+  margin: 1rem;
+  box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
+  text-align: center;
+  background-color: #fff;
+  border-radius: 10px;
 }
+
+.Pokecard-title {
+  font-size: 25px;
+  ;
+}
+
+.Pokecard-data {}
