--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -12,6 +12,12 @@
   font-size: 80%;
 }
 
+.Pokecard-title {
+  margin-bottom: 1rem;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
 .Pokecard-img {
   display: flex;
   justify-content: center;
@@ -20,6 +26,10 @@
   background-color: #eceff1;
   border-radius: 3px;
   margin-bottom: 1rem;
+}
+
+.Pokecard img {
+  transition: all ease 500ms;
 }
 
 .Pokecard img:hover {
